--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,33 +3,31 @@
 # You can change `author1` to your shortname.
 author1:
   # Replace <...> with your own (remove the < >)
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Sean Buchholz
+  email:             smbuchholz@student.fullsail.edu
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Some about bio text for blog Pages
 
-    Open `_data/authors.yml` to edit this text.
+    DON'T FORGET TO DO THIS
 
   # This photo will be used in the about section.
-  picture:
-    path:            https://placehold.it/128x128
+  # picture:
+  #   path:            https://placehold.it/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://placehold.it/128x128
-      2x:            https://placehold.it/256x256
+  #   srcset:
+  #     1x:            https://placehold.it/128x128
+  #     2x:            https://placehold.it/256x256
 
   # Social media icons in sidebar.
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
   social:
-    twitter:         <username>
-    github:          <username>
-    download:        https://github.com/qwtel/hydejack-starter-kit/archive/master.zip
-    # email:           mailto:<mail@domain.tld>
+    twitter:         seanmbuchholz
+    github:          buchholz-sean
+    # download:        https://github.com/qwtel/hydejack-starter-kit/archive/master.zip
+    email:           mailto:smbuchholz@student.fullsail.edu
     # rss:             https://<url>/feed.xml
     # facebook:        <username>
     # google:          <number>
@@ -58,7 +56,7 @@ author1:
     # npm:             <username>
     # hackernews:      <username>
     # trello:          <firstnamelastname>
-    # linkedin:        <firstname-lastname-string>
+    linkedin:        seanbuchholz
     # xing:            <firstname_lastname_counter>
     # blogger:         <number>
     # delicious:       <username>
