--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,9 +9,7 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Some about bio text for blog Pages
-
-    DON'T FORGET TO DO THIS
+    Sean is a web designer and developer located in Maryland, just outside Washington, DC. He is passionate about creating value for the people he interacts with, and loves finding creative solutions to sticky problems.
 
   # This photo will be used in the about section.
   # picture:
